# syauth

./: .gitignore  .promptkit.yaml  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  deny.toml  rustfmt.toml
.agents/skills/bt/: SKILL.md
.agents/skills/bug/: SKILL.md
.agents/skills/ffi/: SKILL.md
.agents/skills/implement/: SKILL.md
.agents/skills/orchestrate/: SKILL.md
.agents/skills/researcher/: SKILL.md
.agents/skills/roadmap/: SKILL.md
.agents/skills/threat/: SKILL.md
.claude/: settings.json
.claude/commands/: bt.md  generalize.md  implement.md  journey.md  march.md  pam.md  perf.md  threat.md
.claude/hooks/: ban-filler-word.sh
.github/workflows/: ci.yml  release.yml
crates/syauth-cli/: Cargo.toml
crates/syauth-cli/src/: doctor.rs  install_pam.rs  install_presenced.rs  lib.rs  list.rs  main.rs  oob.rs  pair.rs  pair_backend.rs  provision.rs  revoke.rs  status.rs  uninstall_pam.rs
crates/syauth-cli/tests/: cli.rs  doctor_flow.rs  e2e_unlock_script.rs  install_pam.rs  install_presenced_flow.rs  pair_flow.rs  pair_lesc_test.rs  status_flow.rs
crates/syauth-cli/tests/snapshots/: cli__doctor_help_snapshot.snap  cli__help_snapshot.snap  cli__install_pam_help_snapshot.snap  cli__install_presenced_help_snapshot.snap  cli__list_help_snapshot.snap  cli__pair_help_snapshot.snap  cli__revoke_help_snapshot.snap  cli__status_help_snapshot.snap  cli__status_snapshot.snap  cli__uninstall_pam_help_snapshot.snap
crates/syauth-core/: Cargo.toml
crates/syauth-core/fuzz/: Cargo.toml
crates/syauth-core/fuzz/fuzz_targets/: frame_parse.rs
crates/syauth-core/src/: bond.rs  frame.rs  lib.rs  mac.rs  replay.rs  secrets.rs  sign.rs
crates/syauth-core/testdata/: kat.json
crates/syauth-core/tests/: kat.rs  keyring_linux.rs
crates/syauth-mobile/: Cargo.toml  build.rs  uniffi.toml
crates/syauth-mobile/examples/: smoke.rs
crates/syauth-mobile/src/: implementation.rs  lib.rs  mobile.udl
crates/syauth-pam/: Cargo.toml
crates/syauth-pam/src/: auth.rs  config.rs  entry.rs  lib.rs
crates/syauth-pam/tests/: pam_daemon_integration.rs  pam_e2e.rs
crates/syauth-presenced/: Cargo.toml
crates/syauth-presenced/src/: audit.rs  lib.rs  lock.rs  main.rs  orchestrator.rs  rpc.rs  runtime.rs  server.rs
crates/syauth-presenced/tests/: backpressure.rs  challenge_flow.rs  lifecycle_smoke.rs  multi_peer.rs  peers_snapshot.rs  replay.rs  rotation.rs  socket_smoke.rs
crates/syauth-transport/: Cargo.toml
crates/syauth-transport/src/: bluez.rs  bluez_advertise.rs  error.rs  lib.rs  mock.rs  peripheral.rs
crates/syauth-transport/tests/: dev004_link_encryption.rs  peripheral_contract.rs
deploy/: version.env
deploy/debian/: changelog  control  copyright  install  rules  syauth.postinst
deploy/fedora/: syauth.spec
docs/: android-setup.md  known-gaps.md  perf-baselines.md  release-process.md  security.md
scripts/: build_aar.sh  check_android_aar.sh  e2e-emulator-down.sh  e2e-emulator-up.sh  e2e-unlock.sh  smoke-install.sh
specs/auto/: RUN-2026-05-17T07-56-16Z.md  RUN-2026-05-17T19-41-58Z.md  RUN-2026-05-17T22-37-57Z.md
specs/bugs/: BUG-20260522-0138.md  BUG-20260528-2334.md
specs/journeys/: JOURNEY-DEV-001-real-lesc.md  JOURNEY-DEV-002-keystore-strongbox.md  JOURNEY-DEV-003-invert-advertising.md  JOURNEY-DEV-004-link-encryption.md  JOURNEY-S-001-scaffold-syauth-presenced.md  JOURNEY-S-001-workspace-bootstrap.md  JOURNEY-S-002-cbor-unix-socket-rpc-stub.md  JOURNEY-S-002-protocol-framing.md  JOURNEY-S-003-peripheral-library-api.md  JOURNEY-S-003-replay-defense.md  JOURNEY-S-004-crypto-primitives.md  JOURNEY-S-004-session-uuid-rotation.md  JOURNEY-S-005-bond-store.md  JOURNEY-S-005-multi-peer-bonds-reload.md  JOURNEY-S-006-challenge-transaction-flow.md  JOURNEY-S-006-secret-storage.md  JOURNEY-S-007-nonce-lru-backpressure.md  JOURNEY-S-007-transport-trait.md  JOURNEY-S-008-pam-skeleton.md  JOURNEY-S-008-pam-unix-socket-client.md  JOURNEY-S-009-install-presenced-retire-burst.md  JOURNEY-S-009-pam-mock-e2e.md  JOURNEY-S-010-bluez-transport.md  JOURNEY-S-010-persistent-gatt-client.md  JOURNEY-S-011-pairing-desktop.md  JOURNEY-S-011-service-foreground-lifecycle.md  JOURNEY-S-012-boot-receiver-watchdog.md  JOURNEY-S-012-day2-cli.md  JOURNEY-S-013-pam-install-helper.md  JOURNEY-S-013-remove-direct-gatt-controller.md  JOURNEY-S-014-challenge-approval-activity.md  JOURNEY-S-014-mobile-uniffi-surface.md  JOURNEY-S-015-android-scaffold.md  JOURNEY-S-015-biometric-keystore-sign.md  JOURNEY-S-016-android-pairing.md  JOURNEY-S-016-syauth-doctor.md  JOURNEY-S-017-android-approve.md  JOURNEY-S-017-status-extension.md  JOURNEY-S-018-android-background-bridge.md  JOURNEY-S-018-phone-notification-history.md  (+4 more)
specs/notes/: 2026-05-22-ad-size-legacy-vs-extended.md
specs/syauth/: ROADMAP.md  SPEC.md
specs/threat/: THREAT-2026-05-15.md
specs/unlock-proximity/: ROADMAP.md  SPEC.md
src/: lib.rs
syauth-android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
syauth-android/app/: .gitkeep  build.gradle.kts
syauth-android/app/src/androidTest/kotlin/com/sy/syauth/android/: HelloWorldTest.kt
syauth-android/app/src/androidTest/kotlin/com/sy/syauth/android/approve/: ApproveScreenTest.kt
syauth-android/app/src/androidTest/kotlin/com/sy/syauth/android/bg/: CdmLifecycleTest.kt
syauth-android/app/src/androidTest/kotlin/com/sy/syauth/android/pair/: PairingScreenTest.kt
syauth-android/app/src/main/: AndroidManifest.xml
syauth-android/app/src/main/kotlin/com/sy/syauth/android/: MainActivity.kt
syauth-android/app/src/main/kotlin/com/sy/syauth/android/approve/: AndroidBiometricPresenter.kt  ApproveScreen.kt  KeystoreSigner.kt  (+6 more)
syauth-android/app/src/main/res/drawable/: ic_launcher_foreground.xml
syauth-android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
syauth-android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
tests/: bluer_smoke.rs  dev003_session_uuid_parity.rs  e2e_pair.rs  e2e_real.rs  pam_smoke.rs  probe_pair_uuid.rs  workspace_smoke.rs
tests/pam.d/: syauth-test
(+66 files in other folders)
