# Workspace manifest for syauth.
#
# Roadmap: specs/syauth/ROADMAP.md — item S-001.
# Spec: specs/syauth/SPEC.md §4.1 (workspace layout).
# Mirrors the layout of ~/sources/prrr: a top-level package plus a `crates/`
# directory of member crates. No business code lives here yet — S-002+ fills in
# each crate.

[workspace]
members = [
    "crates/syauth-core",
    "crates/syauth-transport",
    "crates/syauth-pam",
    "crates/syauth-cli",
    "crates/syauth-mobile",
]
# The `crates/syauth-core/fuzz` crate is a stand-alone libFuzzer harness; it is
# only buildable on nightly with `cargo fuzz` instrumentation and is therefore
# kept out of the regular workspace build.
exclude = ["crates/syauth-core/fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["syauth contributors"]
repository = "https://github.com/sy/syauth"

[workspace.lints.rust]
unsafe_code = "deny"

# Top-level package exists so that the repo-root `tests/` directory (which
# `cargo test --workspace` discovers via the root package) compiles. The root
# package itself ships no library code — every crate of substance lives under
# `crates/`.
[package]
name = "syauth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Phone-as-key unlock for Linux PAM (workspace root)"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

# Dev-dependencies for the repo-level `tests/` directory. S-008's pam_smoke
# needs no Rust deps (it shells out via `std::process::Command`); S-010's
# bluer_smoke needs `bluer` to drive the radio-side smoke check and `tokio`
# for `#[tokio::test]`. Both are gated on `SYAUTH_E2E=1` at runtime and
# default-skip on a developer box without a BLE adapter.
[dev-dependencies]
bluer = { version = "0.17", default-features = false, features = ["bluetoothd"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = "thin"
codegen-units = 1
