# syauth-cli — the `syauth` binary (pair / list / revoke / status / install-pam).
#
# Roadmap items S-011..S-013. S-013 adds `install-pam` and `uninstall-pam`
# subcommands with atomic edit + backup of a PAM service file.

[package]
name = "syauth-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "syauth command-line tool (pair, list, revoke, status, install-pam)"

[lib]
name = "syauth_cli"
path = "src/lib.rs"

[[bin]]
name = "syauth"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
tempfile = "3"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints]
workspace = true
