# syauth-cli — the `syauth` binary (pair / list / revoke / status / install-pam).
#
# Roadmap items S-011..S-013. S-013 adds `install-pam` and `uninstall-pam`
# subcommands with atomic edit + backup of a PAM service file.

[package]
name = "syauth-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "syauth command-line tool (pair, list, revoke, status, install-pam)"

[lib]
name = "syauth_cli"
path = "src/lib.rs"

[[bin]]
name = "syauth"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
tempfile = "3"
thiserror = "2"

# Pairing flow deps (S-011).
# `syauth-core` re-exports `Bond`, `BondStore`, `peer_id_from_pubkey` — the
# bond persistence surface S-011 writes to on a successful pair.
syauth-core = { path = "../syauth-core" }
# `syauth-transport` re-exports `BlueZBtPeer`, `PairingState`, the
# rotating-session-UUID derivation, and the `PairBackend` seam this crate's
# `pair` module dispatches against in production. `default-features = false`
# strips the S-003 `FakePeripheral` test double from the shipped CLI binary.
syauth-transport = { path = "../syauth-transport", default-features = false }
# HKDF-SHA256 for the app-level OOB code derivation. Pinned to the same major
# the workspace already pulled in via `syauth-transport` (S-010) so we share a
# single resolved version in Cargo.lock.
hkdf = "0.13"
sha2 = "0.11"
# Tokio runtime for the async `PairBackend` trait surface. `time` enables the
# `tokio::time::timeout` wrapper that drives the `--timeout-secs` gate.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
# Re-used at run-time by the production path; not required by the integration
# test (the test injects a mock). Kept here so a future caller that wants to
# build a real `bluer`-backed `PairBackend` does not have to add a duplicate
# dep. Matches the pin chosen in S-010.
bluer = { version = "0.17", default-features = false, features = ["bluetoothd"] }
async-trait = "0.1"
# DEV-001 pair-backend: scan-stream extension methods (`next()`) come from
# this trait. `syauth-transport` already pulls in 0.3; pin the same major.
futures = "0.3"
# DEV-001 pair-backend: `uuid::Uuid` is the concrete type the `bluer`
# discovery-filter set expects. Pinned to match the version `bluer`
# itself depends on.
uuid = "1"
# `time::OffsetDateTime` for the Bond.created_at field. Same pin as
# `syauth-core` so the workspace resolves to a single version.
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
# DEV-001 pair flow: random Ed25519 keypair generation for the host's
# per-invocation pubkey exchanged over the LESC-bonded pair-service.
# `rand` re-exports a CSPRNG via `OsRng`. Pinned to the same minor
# `ed25519-dalek` already pulls in transitively so the workspace
# resolves a single version.
rand = "0.8"
# S-016 `syauth doctor` --json: typed JSON object for tooling. The
# crate is already in `Cargo.lock` via `syauth-core` so this adds no
# new transitive surface.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# S-016 doctor: reuse the same CBOR framing helpers + `Request::Status`
# wire shape the PAM module uses to probe the daemon's auth.sock.
# `syauth-presenced` already lives in the workspace; this dependency is
# library-only (no binary linkage).
syauth-presenced = { version = "0.1", path = "../syauth-presenced" }
# S-016 doctor: `geteuid()` for the `/run/user/<uid>` fallback when
# `XDG_RUNTIME_DIR` is unset. `nix` already lives in `Cargo.lock`
# via `syauth-presenced`, so no new transitive surface.
nix = { version = "0.29", features = ["user"] }
# S-017 status: SIGINT handler for the `--watch` polling loop so a
# Ctrl-C breaks out of the redraw cadence cleanly without the
# operator's terminal getting wedged. `signal-hook` is well-maintained
# and avoids pulling a full tokio signal handler into a synchronous
# blocking probe.
signal-hook = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
regex = "1"
tempfile = "3"
# Full tokio feature set so `#[tokio::test]` and `tokio::time::pause` are
# available in the pair_flow integration test.
tokio = { version = "1", features = ["full"] }
# Snapshot testing for S-012 `--help` / `--version` surface (DoD #5).
# Each subcommand's help output is committed as a `.snap` file in
# `tests/snapshots/`; a `clap`-derived regression surfaces as a diff that
# requires a conscious `cargo insta accept` to land.
insta = "1"
# S-016 doctor tests use serde_json to parse the `--json` output and
# assert the top-level schema shape. The crate is already in the
# production deps; the explicit dev declaration keeps the tests'
# import surface honest.
serde_json = "1"

[lints]
workspace = true
