# syauth-core — protocol framing, replay cache, crypto primitives, bond store.
#
# Roadmap items S-002..S-006 fill this crate. S-002 adds the v1 wire-format
# `Frame` type plus its typed `FrameError` and the `proptest` round-trip
# harness. No crypto deps land here yet — the tag is a placeholder
# `[u8; TAG_LEN]` until S-004.

[package]
name = "syauth-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "syauth shared protocol core (framing, replay cache, crypto, bond store)"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# Typed errors with Display impls. Vendored in `prrr` already; no new audit
# surface for the workspace.
thiserror = "2"
# S-005 bond store: Serde derive for the on-disk schema struct.
serde = { version = "1", features = ["derive"] }
# S-005 bond store: TOML codec for `/var/lib/syauth/bonds.toml`.
toml = "0.8"
# S-005 bond store: same-filesystem atomic rename via `NamedTempFile::persist`.
tempfile = "3"
# S-005 bond store: BLAKE3 hash producing the stable peer-id.
blake3 = "1"
# S-005 bond store: RFC3339 timestamps in `created_at`.
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }

[dev-dependencies]
# Property-based round-trip testing for `Frame::encode`/`Frame::decode`.
# Used only under `#[cfg(test)]`.
proptest = "1"
