# syauth-core — protocol framing, replay cache, crypto primitives, bond store.
#
# Roadmap items S-002..S-006 fill this crate. S-002 adds the v1 wire-format
# `Frame` type plus its typed `FrameError` and the `proptest` round-trip
# harness. S-004 (this commit) adds the Ed25519 signing layer
# (`sign::sign_frame` / `sign::verify_frame`) and the BLAKE3-keyed-hash MAC
# (`mac::compute_tag` / `mac::verify_tag` with constant-time compare via
# `subtle::ConstantTimeEq`).

[package]
name = "syauth-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "syauth shared protocol core (framing, replay cache, crypto, bond store)"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# Typed errors with Display impls. Vendored in `prrr` already; no new audit
# surface for the workspace.
thiserror = "2"
# S-005 bond store: Serde derive for the on-disk schema struct.
serde = { version = "1", features = ["derive"] }
# S-005 bond store: TOML codec for `/var/lib/syauth/bonds.toml`.
toml = "0.8"
# S-005 bond store: same-filesystem atomic rename via `NamedTempFile::persist`.
tempfile = "3"
# S-005 bond store: BLAKE3 hash producing the stable peer-id.
blake3 = "1"
# S-005 bond store: RFC3339 timestamps in `created_at`.
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
# S-004 signing: Ed25519 signatures over `version || nonce || challenge`.
# `verify_strict` rejects malleable signatures (RFC 8032 §8.4 cofactored
# verification ambiguity). v2.x is the current RustCrypto release line.
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
# S-004 MAC: constant-time byte-slice equality via `ConstantTimeEq`.
# Defends T-010 (timing side channels) per SPEC §6.
subtle = { version = "2", default-features = false, features = ["std"] }
# S-006 secret storage: `Zeroizing<Vec<u8>>` is the canonical RAII wiper
# wrapping every secret payload returned from the `KeyStore` trait. The
# `zeroize_derive` feature is not needed today — we only use the
# `Zeroizing` smart pointer — but is listed defensively so future
# additions of `#[derive(ZeroizeOnDrop)]` on a Drop type in this module
# do not require touching Cargo.toml again.
zeroize = { version = "1", features = ["zeroize_derive"] }

# S-006 secret storage — Linux kernel keyring backend (primary).
# Only compiled on Linux because the underlying `keyctl(2)` syscalls do
# not exist on other Unixes. Gated via `[target.'cfg(...)'.dependencies]`
# so non-Linux developer boxes can still `cargo check` syauth-core
# without pulling a Linux-specific crate.
[target.'cfg(target_os = "linux")'.dependencies]
# Safe wrapper around `keyctl(2)` syscalls; tiny dep tree, MIT/Apache.
linux-keyutils = { version = "0.2", features = ["std"] }
# DBus client for the libsecret/secret-service freedesktop API (fallback
# when the kernel keyring is unreachable, e.g. containers without
# CONFIG_KEYS). The `rt-tokio-crypto-rust` feature pairs zbus's tokio
# runtime with the pure-Rust RustCrypto AES/HKDF impls — no OpenSSL
# system dep. We consume the upstream `blocking` submodule from this
# crate, but enabling a tokio reactor at compile time matches the rest
# of the syauth workspace (PAM module already builds on tokio in S-008).
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }

[dev-dependencies]
# Property-based round-trip testing for `Frame::encode`/`Frame::decode`.
# Used only under `#[cfg(test)]`.
proptest = "1"
# S-004 KAT loader: parse `testdata/kat.json` in `tests/kat.rs` and the
# in-file `#[cfg(test)]` bootstrap helper.
serde_json = "1"
# S-004 KAT loader: lowercase hex decode for vector fields.
hex = "0.4"
