[package]
name = "syauth-pam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Linux PAM module for syauth phone-as-key unlock (cdylib)."

# Per S-001 DoD: crate-type = ["cdylib", "rlib"] so we get both
# libpam_syauth.so for the loader AND an rlib so the inner helpers can be
# exercised by unit tests in the `rlib` form.
#
# `name = "pam_syauth"` is required so the loader resolves
# `libpam_syauth.so` — PAM strictly expects the module file name to match the
# `pam_*` prefix.
[lib]
crate-type = ["cdylib", "rlib"]
name = "pam_syauth"
path = "src/lib.rs"

[features]
# S-009 — enable the `SYAUTH_TEST_MOCK` env-var pathway. Off in release
# builds. The test harness (`tests/pam_e2e.rs`) turns this on via
# `[dev-dependencies]` so the integration tests can drive the auth path
# against an injected mock peer; production cargo builds never set the
# feature, so the env var is read-then-ignored. See
# `specs/journeys/JOURNEY-S-009-pam-mock-e2e.md` §2 Phase 1.
test-mock = []

[dependencies]
syslog = "7"
libc = "0.2"
# S-009 — protocol primitives, transport trait, and async runtime needed to
# drive a challenge/response from inside `pam_sm_authenticate`. The runtime
# is created and dropped within a single PAM call so no state crosses the
# FFI boundary (SPEC §3.4 anti-goal).
syauth-core = { path = "../syauth-core" }
syauth-transport = { path = "../syauth-transport" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
# Fresh nonces use the OS RNG. `getrandom` 0.3 is already a transitive
# dependency of the workspace (via `ed25519-dalek` → `rand_core`); using it
# directly avoids adding a new tier of rand crates. SPEC §4.2 mandates a
# 16-byte fresh nonce per challenge.
getrandom = "0.3"
time = { version = "0.3", features = ["formatting", "parsing"] }
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
# Tests need the in-process mock peer + the workspace's tempfile helper +
# the crypto primitives needed to construct a signed response. Pulling
# `syauth-pam` itself in with the `test-mock` feature flag turned on lets
# the integration test exercise the env-var-gated code path.
syauth-pam = { path = ".", features = ["test-mock"] }
syauth-core = { path = "../syauth-core" }
syauth-transport = { path = "../syauth-transport" }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
async-trait = "0.1"
time = { version = "0.3", features = ["formatting", "parsing"] }
# Needed at dev-test time for the test peer to call `SigningKey::sign` —
# the `Signer` trait lives in `ed25519-dalek`.
ed25519-dalek = "2"

# The workspace bans `unsafe_code` by default, but the entire purpose of this
# crate is to expose `unsafe extern "C"` symbols across the libpam ABI. We
# opt out at the crate level only, and every single `unsafe` block carries a
# `// SAFETY:` comment per `.agents/skills/ffi/SKILL.md`.
[lints.rust]
unsafe_code = "allow"
