# syauth-transport — BtPeer trait + BlueZ central + LAN fallback.
#
# Roadmap items S-007, S-010. S-007 lands the async `BtPeer` / `Session` trait
# pair plus a `tokio::sync::mpsc`-backed `MockBtPeer` so the PAM module
# (S-008/S-009) can be tested end-to-end before any real radio code exists.
# S-010 will add `bluer`-backed `BlueZBtPeer` behind the same trait.

[package]
name = "syauth-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "syauth transport layer (BLE GATT central via bluer + mock)"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# Shared protocol core. `Frame` and `FrameError` are the only types that cross
# the `BtPeer` trait boundary, so consumers can swap implementations (mock
# today, `bluer` in S-010) without touching the upper layers.
syauth-core = { path = "../syauth-core" }

# Async trait surface. `BtPeer` and `Session` are `async fn` methods on trait
# objects; `async-trait` is the canonical way to do that on stable Rust.
async-trait = "0.1"

# Typed errors with `Display` impls. Matches the version pinned by
# `syauth-core` so the workspace stays on a single major.
thiserror = "2"

# Tokio runtime primitives. `sync` for `mpsc`, `time` for `tokio::time::sleep`
# / `tokio::time::timeout`, plus `macros` / `rt` / `rt-multi-thread` so the
# `#[tokio::test]` attribute compiles inside the mock's test module.
tokio = { version = "1", features = ["sync", "macros", "time", "rt", "rt-multi-thread"] }

[dev-dependencies]
# Full feature set for tests so we can use `#[tokio::test(flavor = ...)]`,
# `tokio::time::pause`, etc., should we ever need them.
tokio = { version = "1", features = ["full"] }
